--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nod.st/client-redirect",
+    "name": "nod.st/client_redirect",
     "description": "CakePHP Client Redirect",
     "type": "cakephp-plugin",
     "keywords": ["cakephp", "javascript", "redirect", "helper"],
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.2.0",
         "composer/installers": "*"
     },
     "minimum-stability": "dev"
