--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "nod.st/client_redirect",
-    "description": "CakePHP Client Redirect",
+    "name": "nod.st/controllers_list",
+    "description": "CakePHP Controllers List",
     "type": "cakephp-plugin",
-    "keywords": ["cakephp", "javascript", "redirect", "helper"],
+    "keywords": ["cakephp", "controller", "list", "component"],
     "authors": [
         {
             "name": "Furkan Tunalı",
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=5.2.0",
+        "php": ">=5.3.0",
         "composer/installers": "*"
     },
     "minimum-stability": "dev"
